fixed profile image on mobile, added background color, reviews carousel

--- a/css/css.css
+++ b/css/css.css
@@ -18,17 +18,9 @@
         padding-top: 10px;
     }
   }
-/* OWNER PIC */
-.profile-img{
-    max-height: 175px;
-    max-width: 175px;
-    /* min-height: 75px;
-    min-width: 75px; */
-    margin-top: 10px;
-} 
 
 .list-unstyled {
-    margin-top: 10px;
+    padding-top: 10px;
 }
 
 /* Header call to action buttons */
